<resources>
    <string name="app_name">大牛快递</string>
    <string name="title_personal">用户</string>
    <string name="title_package">订单</string>
    <string name="title_express">中转</string>
    <string name="title_settings">设置</string>
    <string name="title_activity_login">用户登录</string>
    <string name="prompt_username">账号/手机号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_phonenum">手机号</string>
    <string name="prompt_vericode">手机验证码</string>
    <string name="action_logon">注册</string>
    <string name="action_login">登录</string>
    <string name="action_backlogin">返回登录</string>
    <string name="action_sendvericode">发送验证码</string>
    <string name="welcome">"欢迎！"</string>
    <string name="toast_login_success">"登录成功！"</string>
    <string name="toast_login_wrongpsw">"用户名或密码错误！"</string>
    <string name="toast_login_illegal">"登录失败！请确保输入合法！"</string>
    <string name="toast_logon_illegal">"注册失败！请确保输入合法！"</string>
    <string name="toast_add_illegal">"操作失败！请确保输入合法！"</string>
    <string name="toast_add_exist">"操作失败！用户已存在！"</string>
    <string name="toast_add_success">"操作成功！"</string>
    <string name="invalid_username">无效用户名</string>
    <string name="invalid_password">密码长度必须大于5字符</string>
    <string name="invalid_phonenum">手机号必须为11位数字</string>
    <string name="login_failed">登录失败</string>

    <string name="addPersonal">增加个人信息</string>
    <string name="deletePersonal">删除个人信息</string>
    <string name="changePersonal">修改个人信息</string>
    <string name="searchPersonal">查询个人信息</string>

    <string name="addPackage">增加订单信息</string>
    <string name="deletePackage">删除订单信息</string>
    <string name="changePackage">修改订单信息</string>
    <string name="searchPackage">查询订单信息</string>

    <string name="addExpress">增加物流信息</string>
    <string name="deleteExpress">删除物流信息</string>
    <string name="changeExpress">修改物流信息</string>
    <string name="searchExpress">查询物流信息</string>

    <string name="setting1">设置啥啊</string>


    <string name="search_hint">请输入搜索关键字</string>
    <string name="search_hint_personal">请输入账号/手机号</string>
    <string name="search_hint_package">请输入订单号</string>
    <string name="search_hint_express">请输入运单号</string>
    <string name="no_result">"无查询结果！"</string>

    <string name="title_detail_browse">详情浏览</string>
    <string name="title_detail_edit">编辑信息</string>
    <string name="title_detail_add">新增条目</string>

    <string name="title_back">返回</string>
    <string name="title_prompt_add">确认提交</string>
    <string name="title_go_edit">编辑</string>
    <string name="title_prompt_edit">提交编辑</string>
    <string name="prompt_photo">上传头像</string>

    <string name="go_out_add">请选择导航栏其它子项进行添加操作</string>


    <!--
    private String userid;
    private String password;
    private String username="Unknown";//昵称
    private String phonenum="Unknown";
    private String authority="Common";
    private String address="Unknown";
    -->

    <string name="item_user_userid">账号</string>
    <string name="item_user_username">用户名</string>
    <string name="item_user_phonenum">手机号</string>
    <string name="item_user_authority">用户类型</string>

    <string name="item_user_detail_address">地址</string>


    <!--
    private Package pack;
    private String timestamp;
    private Address nowAddress;
    -->
    <string name="item_express_packid">运单号</string>
    <string name="item_express_time">时间</string>
    <string name="item_express_startAddress">起始地址</string>
    <string name="item_express_nowAddress">当前地址</string>
    <string name="item_express_endAddress">目的地址</string>

    <string name="item_express_detail_expressmanId">快递员编号</string>
    <string name="item_express_detail_expressmanName">快递员姓名</string>
    <string name="item_express_detail_expressmanPhone">快递员电话</string>


    <!--
    private String packageId;//运单号
    private int expenses;//金额
    private String SenderPhone;//发件人电话
    private Address SenderAddress;//发件人地址
    private String ReceiverPhone;//收件人电话
    private Address ReceiverAddress;//收件人地址
    private String PayerPhone;//支付人电话
    private int PaymentStatus=0;//支付状态，默认0
    -->
    <string name="item_package_packageid">运单号</string>
    <string name="item_package_expenses">金额</string>
    <string name="item_package_SenderPhone">发件人电话</string>
    <string name="item_package_ReceiverPhone">收件人电话</string>
    <string name="item_package_ReceiverAddress">收件人地址</string>
    <string name="item_package_PaymentStatus">支付状态</string>

    <string name="item_package_detail_SenderAddress">发件人地址</string>
    <string name="item_package_detail_PayerPhone">支付人电话</string>


    <string name="Mode">模式</string>
    <string name="mode_add">添加</string>
    <string name="mode_edit">编辑</string>
    <string name="mode_browse">浏览</string>
    <string name="present_obj_user">User</string>
    <string name="present_obj_pack">Pack</string>
    <string name="present_obj_express">Express</string>
    <string name="present_obj_setting">Setting</string>

    <string name="toast_express_add_not_exist">添加失败！运单号或快递员不存在！</string>
    <string name="toast_express_edit_not_exist">添加失败！快递员不存在！</string>
    <string name="toast_search_not_found">未搜索到相关项目！</string>




    <string name="app_description">百度地图</string>
    <string name="bd_location_description">百度地图定位SDK</string>
    <string name="btn_location">发起定位获取定位信息</string>
    <string name="bd_map_description">百度地图地图SDk</string>
    <string name="btn_change_map">随机切换地图类型</string>
    <string name="btn_location_map">开启</string>
    <string name="btn_download_map">离线地图</string>
    <string name="btn_close_location_map">关闭定位</string>
    <string name="bd_ovelay_map_description">百度地图的绘制</string>
    <string name="bd_poi">周边检索功能</string>
    <string name="bd_route">线路规划</string>
    <string name="bd_trace">鹰眼轨迹</string>
    <string name="bd_rail">地理围栏</string>
    <string name="bd_navigation">导航</string>

</resources>
