<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="5"
            android:src="@drawable/ic_md_truck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:text="@string/title_activity_login"
            android:textSize="30sp"
            android:textStyle="bold"
            android:theme="@style/AppTheme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_md_person" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:theme="@style/MyEditText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_md_lock" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_login"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:theme="@style/MyEditText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_phonenum"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_md_phone" />

        <EditText
            android:id="@+id/phonenum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center"
            android:hint="@string/prompt_phonenum"

            android:inputType="text"
            android:selectAllOnFocus="true"
            android:theme="@style/MyEditText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_vericode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="60dp"
        android:paddingRight="40dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_md_phone"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/vericode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"

            android:hint="@string/prompt_vericode"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:theme="@style/MyEditText" />

        <Button
            android:id="@+id/button_sendvericode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:enabled="true"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/action_sendvericode"
            android:textColor="@color/btn_text"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingLeft="70dp"
        android:paddingTop="30dp"
        android:paddingRight="70dp">

        <Button
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/action_backlogin"
            android:textColor="@color/btn_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/action_login"
            android:textColor="@color/btn_text"
            android:textSize="18sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button_logon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/action_logon"
            android:textColor="@color/btn_text"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>