<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    android:background="@drawable/item_selector">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <ImageView
            android:id="@+id/package_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:src="@drawable/ic_md_package"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/packageId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/item_package_packageid"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/text_black"/>
                <TextView
                    android:id="@+id/packageId_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/item_package_packageid"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/expenses"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/item_package_expenses"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/text_black"/>
                <TextView
                    android:id="@+id/expenses_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/item_package_expenses"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/SenderPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/item_package_SenderPhone"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/text_black"/>
                <TextView
                    android:id="@+id/SenderPhone_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/item_package_SenderPhone"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ReceiverPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/item_package_ReceiverPhone"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/text_black"/>
                <TextView
                    android:id="@+id/ReceiverPhone_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/item_package_ReceiverPhone"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ReceiverAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/item_package_ReceiverAddress"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/text_black"/>
                <TextView
                    android:id="@+id/ReceiverAddress_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/item_package_ReceiverAddress"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/PaymentStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/item_package_PaymentStatus"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/text_black"/>
                <TextView
                    android:id="@+id/PaymentStatus_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/item_package_PaymentStatus"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/view_divide_line"></include>

</LinearLayout>